--- a/events/form.html
+++ b/events/form.html
@@ -41,7 +41,7 @@
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
           <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" id="sumbtn" class="btn btn-primary">Submit</button>
       </form>
       <script src="form.js"></script>
 </body>
