--- a/events/form.html
+++ b/events/form.html
@@ -16,7 +16,7 @@
     <h1>
         jQuery Form Event
     </h1>
-    <form>
+    <form id="myform">
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
           <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
