--- a/events/set_method.html
+++ b/events/set_method.html
@@ -8,5 +8,20 @@
 <script src="/jquery/jquery.js"></script>
 <body>
     <h1>Set method in jQuery</h1>
+    <div id="box" class="mydiv test newclass" style="border: 2px solid red;">
+        <h3>Radhe Radhe</h3>
+        <ul> 
+            <li>Jai </li>
+            <li>Shree</li>
+            <li>Ram</li>
+        </ul>
+    </div>
+    <form action="" id="myform">
+        <label for="sname">Student Name</label>
+        <input type="text" name="" id="sname" placeholder="Enter student Name">
+        <label for="sname">Student Class</label>
+        <input type="text" name="" id="sclass" placeholder="Enter Student Class">
+        <input type="sumbit" value="sumbit">
+    </form>
 </body>
 </html>
