--- a/events/set_method.html
+++ b/events/set_method.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Set method in jQuery</h1>
     <div id="box" class="mydiv test newclass" style="border: 2px solid red;">
-        <h3>Radhe Radhe</h3>
+        <h3 class="h">Radhe Radhe</h3>
         <ul> 
             <li>Jai </li>
             <li>Shree</li>
@@ -23,5 +23,7 @@
         <input type="text" name="" id="sclass" placeholder="Enter Student Class">
         <input type="sumbit" value="sumbit">
     </form>
+    <button id="mybtn">Click to set the method</button>
+    <script src="set_method.js"></script>
 </body>
 </html>
