--- a/events/set_method.html
+++ b/events/set_method.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Set method in jQuery</h1>
     <div id="box" class="mydiv test newclass" style="border: 2px solid red;">
+        <p id="mypara">(कर्मण्येवाधिकारस्ते मा फलेषु कदाचन।
+            मा कर्मफलहेतुर्भूर्मा ते सङ्गोऽस्त्वकर्मणि॥)</p>
         <h3 class="h">Radhe Radhe</h3>
         <ul> 
             <li>Jai </li>
