--- a/events/set_method.html
+++ b/events/set_method.html
@@ -4,6 +4,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Set method in jQuery</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+            margin-top: 30px;
+        }
+
+        #box {
+            background-color: #fff;
+            margin: 20px auto;
+            padding: 20px;
+            width: 80%;
+            max-width: 600px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        #box h3 {
+            color: #009688;
+            font-size: 24px;
+            text-align: center;
+        }
+
+        #box ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        #box li {
+            padding: 5px 0;
+            font-size: 18px;
+            text-align: center;
+        }
+
+        #myform {
+            margin: 30px auto;
+            width: 80%;
+            max-width: 600px;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        #myform label {
+            display: block;
+            margin-bottom: 8px;
+            font-size: 16px;
+            color: #555;
+        }
+
+        #myform input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        #myform input[type="submit"] {
+            background-color: #009688;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            font-size: 18px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        #myform input[type="submit"]:hover {
+            background-color: #00796b;
+        }
+
+        #mybtn {
+            display: block;
+            margin: 30px auto;
+            padding: 10px 20px;
+            background-color: #009688;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 18px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        #mybtn:hover {
+            background-color: #00796b;
+        }
+        .pink{
+            background-color:red !important;
+        }
+    </style>
 </head>
 <script src="/jquery/jquery.js"></script>
 <body>
