--- a/method/css.html
+++ b/method/css.html
@@ -71,5 +71,6 @@
         <p id="mypara">"यदा यदा हि धर्मस्य ग्लानिर्भवति भारत | अभ्युत्थानमधर्मस्य तदात्मानं सृजाम्यहम्॥"</p>
         <button id="mybtn">Click Me</button>
     </div>
+    <script src="css.js"></script>
 </body>
 </html>
