--- a/method/css.html
+++ b/method/css.html
@@ -106,6 +106,14 @@
         #light:hover {
             background-color: #ccc;
         }
+        .red {
+            background-color: orange !important;
+            color: yellow !important;
+        }
+        .green{
+            background-color: aqua;
+            color: white;
+        }
     </style>
 </head>
 <script src="/jquery/jquery.js"></script>
@@ -119,7 +127,8 @@
     <h1>CSS & Class Methods</h1>
     <div id="box">
         <p id="mypara">"यदा यदा हि धर्मस्य ग्लानिर्भवति भारत | अभ्युत्थानमधर्मस्य तदात्मानं सृजाम्यहम्॥"</p>
-        <button id="mybtn">Click Me</button>
+        <button id="mybtn">Click Me Red</button>
+        <button id="mybtn2">Click Me remove The Red class.</button>
     </div>
 
     <script src="css.js"></script>
