--- a/method/css.html
+++ b/method/css.html
@@ -7,7 +7,7 @@
     <style>
          body {
             font-family: 'Arial', sans-serif;
-            background-color: #f5f5f5;
+            background-color: #17e446;
             margin: 0;
             padding: 0;
             display: flex;
@@ -27,7 +27,7 @@
 
         /* Box styling */
         #box {
-            background-color: #fff;
+            background-color: #0fc1e1;
             padding: 40px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -127,8 +127,9 @@
     <h1>CSS & Class Methods</h1>
     <div id="box">
         <p id="mypara">"यदा यदा हि धर्मस्य ग्लानिर्भवति भारत | अभ्युत्थानमधर्मस्य तदात्मानं सृजाम्यहम्॥"</p>
-        <button id="mybtn">Click Me Red</button>
+        <button id="mybtn">Click Me To Add Red Class</button>
         <button id="mybtn2">Click Me remove The Red class.</button>
+        <button id="mybtn3">Click Me to add Toggle Class.</button>
     </div>
 
     <script src="css.js"></script>
