--- a/method/on&off/on&off.html
+++ b/method/on&off/on&off.html
@@ -145,11 +145,11 @@
 
     <div id="box">
         <p id="mypara">"यदा यदा हि धर्मस्य ग्लानिर्भवति भारत | अभ्युत्थानमधर्मस्य तदात्मानं सृजाम्यहम्॥"</p>
-        <!-- <button id="mybtn">Click Me To Add Red Class</button>
-        <button id="mybtn2">Click Me To Remove Red Class</button>
+        <button id="mybtn">Click Me To Off Click event</button>
+        <!-- <button id="mybtn2">Click Me To Remove Red Class</button>
         <button id="mybtn3">Click Me To Toggle Class</button> -->
     </div>
-    <button id="mybtn">Click Button</button>
+    <!-- <button id="mybtn">Click Button</button> -->
     
     <script src="on&off.js"></script>
 </body>
