--- a/method/append&prepend/append&prepend.html
+++ b/method/append&prepend/append&prepend.html
@@ -7,6 +7,13 @@
 </head>
 <script src="/jquery/jquery.js"></script>
 <body>
-    
+    <h1>Append & Prepend in jQuery</h1>
+    <div id="box">
+        <p id="mypara">
+            नैनं छिन्दन्ति शस्त्राणि नैनं दहति पावकः।
+            न चैनं कलेदायः न शोषयति मारुतः॥
+        </p>
+    </div>
+    <button id="btn">Click to get Translation</button>
 </body>
 </html>
