--- a/method/append&prepend/append&prepend.html
+++ b/method/append&prepend/append&prepend.html
@@ -15,5 +15,6 @@
         </p>
     </div>
     <button id="btn">Click to get Translation</button>
+    <script src="append&prepend.js"></script>
 </body>
 </html>
