--- a/method/append&prepend/append&prepend.html
+++ b/method/append&prepend/append&prepend.html
@@ -14,6 +14,7 @@
             न चैनं कलेदायः न शोषयति मारुतः॥
         </p>
     </div>
+    <button id="btn1">Click to get the verse</button>
     <button id="btn">Click to get Translation</button>
     <script src="append&prepend.js"></script>
 </body>
